// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hooks components bluebase.components.register.internal should register Body1 component with proper styles 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "rgba(0, 0, 0, 0.87)",
        "fontFamily": "Helvetica",
        "fontSize": 16,
        "fontWeight": "400",
      },
      undefined,
    ]
  }
>
  Sample Text
</Text>
`;

exports[`hooks components bluebase.components.register.internal should register Body2 component with proper styles 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "rgba(0, 0, 0, 0.87)",
        "fontFamily": "Helvetica",
        "fontSize": 14,
        "fontWeight": "400",
      },
      undefined,
    ]
  }
>
  Sample Text
</Text>
`;

exports[`hooks components bluebase.components.register.internal should register Caption component with proper styles 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "rgba(0, 0, 0, 0.87)",
        "fontFamily": "Helvetica",
        "fontSize": 12,
        "fontWeight": "400",
      },
      undefined,
    ]
  }
>
  Sample Text
</Text>
`;

exports[`hooks components bluebase.components.register.internal should register H1 component with proper styles 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "rgba(0, 0, 0, 0.87)",
        "fontFamily": "Helvetica",
        "fontSize": 96,
        "fontWeight": "300",
      },
      undefined,
    ]
  }
>
  Sample Text
</Text>
`;

exports[`hooks components bluebase.components.register.internal should register H2 component with proper styles 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "rgba(0, 0, 0, 0.87)",
        "fontFamily": "Helvetica",
        "fontSize": 60,
        "fontWeight": "300",
      },
      undefined,
    ]
  }
>
  Sample Text
</Text>
`;

exports[`hooks components bluebase.components.register.internal should register H3 component with proper styles 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "rgba(0, 0, 0, 0.87)",
        "fontFamily": "Helvetica",
        "fontSize": 48,
        "fontWeight": "400",
      },
      undefined,
    ]
  }
>
  Sample Text
</Text>
`;

exports[`hooks components bluebase.components.register.internal should register H4 component with proper styles 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "rgba(0, 0, 0, 0.87)",
        "fontFamily": "Helvetica",
        "fontSize": 34,
        "fontWeight": "400",
      },
      undefined,
    ]
  }
>
  Sample Text
</Text>
`;

exports[`hooks components bluebase.components.register.internal should register H5 component with proper styles 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "rgba(0, 0, 0, 0.87)",
        "fontFamily": "Helvetica",
        "fontSize": 24,
        "fontWeight": "400",
      },
      undefined,
    ]
  }
>
  Sample Text
</Text>
`;

exports[`hooks components bluebase.components.register.internal should register H6 component with proper styles 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "rgba(0, 0, 0, 0.87)",
        "fontFamily": "Helvetica",
        "fontSize": 20,
        "fontWeight": "500",
      },
      undefined,
    ]
  }
>
  Sample Text
</Text>
`;

exports[`hooks components bluebase.components.register.internal should register Overline component with proper styles 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "rgba(0, 0, 0, 0.87)",
        "fontFamily": "Helvetica",
        "fontSize": 12,
        "fontWeight": "400",
        "textTransform": "uppercase",
      },
      undefined,
    ]
  }
>
  Sample Text
</Text>
`;

exports[`hooks components bluebase.components.register.internal should register Subtitle1 component with proper styles 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "rgba(0, 0, 0, 0.87)",
        "fontFamily": "Helvetica",
        "fontSize": 16,
        "fontWeight": "400",
      },
      undefined,
    ]
  }
>
  Sample Text
</Text>
`;

exports[`hooks components bluebase.components.register.internal should register Subtitle2 component with proper styles 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "rgba(0, 0, 0, 0.87)",
        "fontFamily": "Helvetica",
        "fontSize": 14,
        "fontWeight": "500",
      },
      undefined,
    ]
  }
>
  Sample Text
</Text>
`;
